@@ -667,7 +667,7 @@
 
 // edit
 #define STRING_EDIT_NO_CHANGES       "Ne detektis nenian redakton."
-#define STRING_EDIT_NO_EDITS         "Ne redaktis nenion."
+#define STRING_EDIT_FAILED           "Editing failed with exit code {1}."
 #define STRING_EDIT_COMPLETE         "Redaktis komplete."
 #define STRING_EDIT_LAUNCHING        "Lanĉanta nun '{1}'..."
 #define STRING_EDIT_CHANGES          "Detektis redaktojn."
