@@ -666,7 +666,7 @@
 
 // edit
 #define STRING_EDIT_NO_CHANGES       "Nessuna modifica riscontrata."
-#define STRING_EDIT_NO_EDITS         "Nessuna modifica effettuata."
+#define STRING_EDIT_FAILED           "Editing failed with exit code {1}."
 #define STRING_EDIT_COMPLETE         "Modifica completa."
 #define STRING_EDIT_LAUNCHING        "Esecuzione di  '{1}' ora..."
 #define STRING_EDIT_CHANGES          "Modifiche rilevate."
